--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "emoji-picker-react": "^4.4.4",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
     "node-sass": "^6.0.1",
